# barbaNS_chpl_MPI_perf_study

chpl_impls/: build.bash  flowPlot.chpl  flowPlot.py  nsStep11  nsStep11.chpl  nsStep12.chpl
cpp_impls/: CMakeLists.txt  flowPlot.py  nsStep11.cpp  nsStep11.h  nsStep11_old.cpp  nsStep12.cpp  nsStep12.h  utils.cpp  utils.h
